# mod-dynamic-quest-plus

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DESIGN.md  TODO.md
conf/: mod_dynamicquests.conf.dist
data/sql/: dq_import_all.sql
data/sql/base/: character_dq_sequences.sql  dq_archetype.sql  dq_chest_items.sql  dq_collectible_entries.sql  dq_context_seed.sql  dq_courier_template.sql  dq_emotion.sql  dq_gameobject_template.sql  dq_herb_seller.sql  dq_lore_index.sql  (+4 more)
src/: loader.cpp
src/chest/: DQChestReward.cpp  DQChestReward.h
src/core/: ArchetypeMgr.cpp  ArchetypeMgr.h  DQAnimationMgr.cpp  DQAnimationMgr.h  DQClientSession.cpp  DQClientSession.h  DQContextResolver.cpp  DQContextResolver.h  DQDialogueMgr.cpp  DQDialogueMgr.h  DQEmotionEngine.cpp  DQEmotionEngine.h  DQExitSystem.cpp  DQExitSystem.h  DQLog.h  DQNPCBuilder.cpp  DQNPCBuilder.h  DQSpawnSystem.cpp  DQSpawnSystem.h  DynamicQuestMgr.cpp  DynamicQuestMgr.h  EligibilityEngine.cpp  EligibilityEngine.h  InteractionTemplateLibrary.cpp  InteractionTemplateLibrary.h  NPCMatchingEngine.cpp  NPCMatchingEngine.h  PlayerContextObserver.cpp  PlayerContextObserver.h  WorldCatalogue.cpp  WorldCatalogue.h
src/mechanics/: IMechanicModule.h  MechanicArchetype.cpp  MechanicArchetype.h  MechanicHungryChild.cpp  MechanicHungryChild.h  MechanicSuccubus.cpp  MechanicSuccubus.h  MechanicUtils.cpp  MechanicUtils.h
src/scripts/: DQ_CommandScript.cpp  DQ_CourierAI.cpp  DQ_CourierAI.h  DQ_HungryChildAI.cpp  DQ_PassiveHooks.cpp  DQ_PlayerScript.cpp  DQ_PropScript.cpp  DQ_SuccubusAI.cpp  DQ_SuccubusAI.h  DQ_WorldScript.cpp
(+25 files in other folders)
